{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 118,
  "lineage": "fb5809ff-5373-7fee-3681-7f0a5cbcdf55",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-30T15:39:31.893-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-terraform-357100/global/firewalls/bastion-ssh",
            "log_config": [],
            "name": "bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/global/networks/vpc-gke",
            "priority": 1000,
            "project": "gcp-terraform-357100",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/global/firewalls/bastion-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220719",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/zones/us-central1-a/disks/management-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcp-terraform-357100/zones/us-central1-a/instances/management-vm",
            "instance_id": "6501671382165229020",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "eq6nrAsgw44=",
            "name": "management-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/global/networks/vpc-gke",
                "network_ip": "10.0.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/regions/us-central1/subnetworks/management-subnet",
                "subnetwork_project": "gcp-terraform-357100"
              }
            ],
            "project": "gcp-terraform-357100",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/zones/us-central1-a/instances/management-vm",
            "service_account": [
              {
                "email": "bastion-service-account@gcp-terraform-357100.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.bastion.google_service_account.bastion-sa",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.management-sn"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/gcp-terraform-357100/global/networks/vpc-gke",
            "mtu": 0,
            "name": "vpc-gke",
            "project": "gcp-terraform-357100",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/global/networks/vpc-gke"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/gcp-terraform-357100/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/global/networks/vpc-gke",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "gcp-terraform-357100",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/global/routes/egress-internet",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-30T15:39:32.378-07:00",
            "id": "projects/gcp-terraform-357100/regions/us-central1/routers/vm-router",
            "name": "vm-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/global/networks/vpc-gke",
            "project": "gcp-terraform-357100",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/regions/us-central1/routers/vm-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "gcp-terraform-357100/us-central1/vm-router/vm-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "vm-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcp-terraform-357100",
            "region": "us-central1",
            "router": "vm-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/regions/us-central1/subnetworks/management-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.management-sn"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "gcp-terraform-357100/us-central1/vm-router/cluster-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "cluster-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcp-terraform-357100",
            "region": "us-central1",
            "router": "vm-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/gcp-terraform-357100/regions/us-central1/subnetworks/restricted-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.restricted-sn"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-30T15:39:32.072-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/gcp-terraform-357100/regions/us-central1/subnetworks/management-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/global/networks/vpc-gke",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-terraform-357100",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/regions/us-central1/subnetworks/management-subnet"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-30T15:39:32.472-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/gcp-terraform-357100/regions/us-central1/subnetworks/restricted-subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "restricted-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/global/networks/vpc-gke",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-terraform-357100",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.101.0.0/16",
                "range_name": "gke-private-cluster-pods-7bf20843"
              },
              {
                "ip_cidr_range": "10.102.0.0/16",
                "range_name": "gke-private-cluster-services-7bf20843"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-terraform-357100/regions/us-central1/subnetworks/restricted-subnet"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}